--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <title></title>
   </head>
   <body>
-    <!-- Page Content Here -->
+    <div id="chart" style="width:600px;height:300px"></div>
     <!-- [if lt IE 9]><script type="js/excanvas.min.js"></script><![endif]-->
-    <script src="js/flotr.min.js"></script>
+    <script src="js/flotr2.min.js"></script>
+    <script>
+    var wins = [[[2006,13],[2007,11],[2008,15],[2009,15],[2010,18],[2011,21],
+                 [2012,28]]];
+    window.onload = function () {
+       Flotr.draw(
+           document.getElementById("chart"),
+           wins,
+           {
+              bars: {
+                  show: true
+              }
+           }
+       );
+    };
+    </script>
   </body>
 </html>
