--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                  [2012,28]]];
     window.onload = function () {
        Flotr.draw(
-           document.getElementById("chart"),
-           wins,
-           {
+           document.getElementById("chart"), wins, {
               bars: {
                   show: true
-              }
-           }
-       );
-    };
+              },
+              yaxis: {
+                  min: 0,
+                  tickDecimals: 0
+              }});
+       };
     </script>
   </body>
 </html>
