--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
     <!-- [if lt IE 9]><script type="js/excanvas.min.js"></script><![endif]-->
     <script src="js/flotr2.min.js"></script>
     <script>
-    var wins = [[[2006,13],[2007,11],[2008,15],[2009,15],[2010,18],[2011,21],
-                 [2012,28]]];
+    var wins = [[[0,13],[1,11],[2,15],[3,15],[4,18],[5,21],[6,28]]];
+    var years = [
+      [0, "2006"],
+      [1, "2007"],
+      [2, "2008"],
+      [3, "2009"],
+      [4, "2010"],
+      [5, "2011"],
+      [6, "2012"],
+    ];
     window.onload = function () {
-       Flotr.draw(
-           document.getElementById("chart"), wins, {
+       Flotr.draw(document.getElementById("chart"), wins, {
               bars: {
-                  show: true
+                  show: true,
+                  barWidth: 0.5
               },
               yaxis: {
                   min: 0,
                   tickDecimals: 0
-              }});
-       };
+              },
+              xaxis: {
+                ticks: years
+              }
+       });
+    };
     </script>
   </body>
 </html>
