--- a/index.html
+++ b/index.html
@@ -21,16 +21,25 @@
     ];
     window.onload = function () {
        Flotr.draw(document.getElementById("chart"), wins, {
+              title: "Manchester City Wins",
+              colors: ["#89AFD2"],
               bars: {
                   show: true,
-                  barWidth: 0.5
+                  barWidth: 0.5,
+                  shadowSize: 0,
+                  fillOpacity: 1,
+                  lineWidth: 0
               },
               yaxis: {
                   min: 0,
                   tickDecimals: 0
               },
               xaxis: {
-                ticks: years
+                  ticks: years
+              },
+              grid: {
+                  horizontalLines: false,
+                  verticalLines: false
               }
        });
     };
