--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
     <!-- [if lt IE 9]><script type="js/excanvas.min.js"></script><![endif]-->
     <script src="js/flotr2.min.js"></script>
     <script>
-    var wins = [[[0,13],[1,11],[2,15],[3,15],[4,18],[5,21],[6,28]]];
-    var years = [
-      [0, "2006"],
-      [1, "2007"],
-      [2, "2008"],
-      [3, "2009"],
-      [4, "2010"],
-      [5, "2011"],
-      [6, "2012"],
+    var wins2 = [[[0,28],[1,28],[2,21],[3,20],[4,19];
+    var teams = [
+      [0, "MCI"],
+      [1, "MUN"],
+      [2, "ARS"],
+      [3, "TOT"],
+      [4, "NEW"]
     ];
     window.onload = function () {
-       Flotr.draw(document.getElementById("chart"), wins, {
-              title: "Manchester City Wins",
-              colors: ["#89AFD2"],
+       Flotr.draw(document.getElementById("chart"), wins2, {
+              title: "Premier League Wins (2011-2012)",
+              colors: ["#89AFD2", "#1D1D1D", "#DF021D", "#0E204B", "#E67840"],
               bars: {
                   show: true,
                   barWidth: 0.5,
@@ -35,7 +33,7 @@
                   tickDecimals: 0
               },
               xaxis: {
-                  ticks: years
+                  ticks: teams
               },
               grid: {
                   horizontalLines: false,
